; ModuleID = '/home/carl/AnghaBench/linux/drivers/reset/extr_core.c_reset_controller_register.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/reset/extr_core.c_reset_controller_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reset_controller_dev = type { i32, i32, i32, i64 }

@of_reset_simple_xlate = common dso_local global i64 0, align 8
@reset_list_mutex = common dso_local global i32 0, align 4
@reset_controller_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reset_controller_register(%struct.reset_controller_dev* %0) #0 {
  %2 = alloca %struct.reset_controller_dev*, align 8
  store %struct.reset_controller_dev* %0, %struct.reset_controller_dev** %2, align 8
  %3 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %2, align 8
  %4 = getelementptr inbounds %struct.reset_controller_dev, %struct.reset_controller_dev* %3, i32 0, i32 3
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %13, label %7

7:                                                ; preds = %1
  %8 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %2, align 8
  %9 = getelementptr inbounds %struct.reset_controller_dev, %struct.reset_controller_dev* %8, i32 0, i32 0
  store i32 1, i32* %9, align 8
  %10 = load i64, i64* @of_reset_simple_xlate, align 8
  %11 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %2, align 8
  %12 = getelementptr inbounds %struct.reset_controller_dev, %struct.reset_controller_dev* %11, i32 0, i32 3
  store i64 %10, i64* %12, align 8
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %2, align 8
  %15 = getelementptr inbounds %struct.reset_controller_dev, %struct.reset_controller_dev* %14, i32 0, i32 2
  %16 = call i32 @INIT_LIST_HEAD(i32* %15)
  %17 = call i32 @mutex_lock(i32* @reset_list_mutex)
  %18 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %2, align 8
  %19 = getelementptr inbounds %struct.reset_controller_dev, %struct.reset_controller_dev* %18, i32 0, i32 1
  %20 = call i32 @list_add(i32* %19, i32* @reset_controller_list)
  %21 = call i32 @mutex_unlock(i32* @reset_list_mutex)
  ret i32 0
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @list_add(i32*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
